welcome.lessons.welcome.traversal.Snake.scala.code
def test() {
  if (estFaceMur()) {
    gauche()
    if (estFaceMur()) {
      droite()
      return true
    }
    if (!estFaceMur()) {
      droite() ; droite() 
      if (estFaceMur()) {
        gauche()
        return true
      }
    }    
  
}
return false 
        }

def exo() {
  baisseBrosse()
  while(!test()) {
    avance()
  }
}




override def run() {  exo()
}